# plane

./: .gitignore  CMakeLists.txt  Cuestionario.xlsx  README.md  algoritmo.dia  arreglo-factorial.docx
docs/: Cuestionario.csv  Cuestionario.xlsx  DOE.csv  DOE.xlsx  analisis-completo.csv  analisis-resultados.csv  pseudocodigo.txt  tabla_final.csv
releases/: analizer-amd64
src/app/: main.cpp
